# llm-jp-judge

./: .gitignore  README.md  pyproject.toml  requrements.txt
example/data/: quality.jsonl  safety.jsonl
example/output/gpt-4o-2024-05-13/: quality.jsonl
scripts/: download_ac_borderline_v1.0.sh  download_ac_v2.0.sh  download_llm_jp_instructions_jculture_v1.0.sh  download_llm_jp_instructions_v1.0.sh  download_sbi_safety_boundary.sh
src/llm_jp_gen_eval/: __main__.py  evaluate.py  generate.py  inference.py
src/llm_jp_gen_eval/client/: __init__.py  local.py  remote.py
src/llm_jp_gen_eval/config/: benchmark.yaml  evaluate.yaml  generate.yaml  inference.yaml
src/llm_jp_gen_eval/config/aspect/: quality.yaml  (+1 more)
src/llm_jp_gen_eval/dashboard/: __init__.py  base.py  wandb.py
src/llm_jp_gen_eval/dataset/: __init__.py  answer_carefully.py  ichikara.py  mt_bench.py
src/llm_jp_gen_eval/evaluator/: __init__.py  base.py  mt_bench.py  quality.py  safety.py
src/llm_jp_gen_eval/utils/: data.py
src/llm_jp_judge/: __main__.py  evaluate.py  generate.py
src/llm_jp_judge/client/: __init__.py  base.py  local.py  remote.py
src/llm_jp_judge/config/: generate.yaml
src/llm_jp_judge/dashboard/: __init__.py  base.py  wandb.py
src/llm_jp_judge/dataset/: __init__.py  borderline.py  culture.py  msts.py  mt_bench.py  quality.py  safety.py  safety_borderline.py  safety_boundary.py  utils.py
src/llm_jp_judge/evaluator/: __init__.py  base.py  borderline.py  culture.py  mt_bench.py  quality.py  safety.py  safety_borderline.py  safety_boundary.py
src/llm_jp_judge/utils/: data.py
(+31 files in other folders)
