[project]
name = "llm-jp-judge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic==0.49.0",
    "awscli==1.38.5",
    "boto3==1.37.5",
    "datasets>=4.1.1",
    "hydra-core==1.3.2",
    "openai==1.65.2",
    "python-dotenv==1.0.1",
    "transformers<4.54.0",
    "vllm>=0.6.2",
    "wandb==0.19.7",
]
