[project]
name = "llm-jp-judge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.82.0",
    "awscli>=1.44.42",
    "boto3>=1.42.52",
    "datasets>=4.5.0",
    "hydra-core>=1.3.2",
    "jinja2>=3.1.6",
    "numpy<2.3",  # for compatibility with vllm (as of v0.15.1)
    "openai>=2.21.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "transformers<5",  # for compatibility with vllm (as of v0.15.1)
    "wandb>=0.25.0",
]

[project.optional-dependencies]
vllm = [
    "vllm>=0.15.1",
]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.4",
    "types-tqdm>=4.67.3.20260303",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint.isort]
lines-after-imports = 2
